# limen

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-aruba.yml  deploy-azure.yml  pre-commit.yml
data/: README.md
data/notebooks/: 02_backtest_oct2018.ipynb
docs/: HANDOFF.md  OSS_IMPACT.md  api.md  architecture.md  data-model.md  demo.md  deployment.md  geodata.md  grounding.md  iot.md  ml.md  openclaw.md  runbook.md  scoring-model.md  warning-logic.md
docs/artifacts/: backtest_oct_2018.md
docs/superpowers/plans/: 2026-07-11-static-html-risk-report.md  2026-07-20-dynamic-flood-forecast.md  2026-07-21-comune-region-risk-aggregation.md
docs/superpowers/specs/: 2026-07-11-static-html-risk-report-design.md  2026-07-21-comune-region-risk-aggregation-design.md
frontend/: .env.local.example  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  types.ts  vite-env.d.ts
frontend/src/__tests__/: AdminUsersPage.test.tsx  AuthPages.test.tsx  CellTrendSparkline.test.tsx  ComuneLeaderboard.test.tsx  DivergenceMap.test.tsx  ExplainerPage.test.tsx  HomePage.test.tsx  IntegrationsPage.test.tsx  LegendPanel.test.tsx  NationalReportPanel.test.tsx  RegionAccordion.test.tsx  ReliabilityChart.test.tsx  RiskMap.test.tsx  SciencePage.test.tsx  ShadowDiagnosticsPage.test.tsx  ShadowPanel.test.tsx  api-client.test.ts  risk-colors.test.ts  roles.test.ts  setup.ts
frontend/src/components/: AdminUsersPage.tsx  AlertList.tsx  AuthPages.tsx  CellPopup.tsx  CellTrendSparkline.tsx  ComuneLeaderboard.tsx  Course.tsx  DivergenceMap.tsx  ExplainerPage.tsx  ForecastList.tsx  HomePage.tsx  IntegrationsPage.tsx  LegendPanel.tsx  NationalReportPanel.tsx  NationalStrip.tsx  OverlayControl.tsx  RegionAccordion.tsx  ReliabilityChart.tsx  RiskMap.tsx  SciencePage.tsx  ShadowDiagnosticsPage.tsx  ShadowPanel.tsx  TimelineSlider.tsx
frontend/src/lib/: api-client.ts  auth.tsx  env.ts  risk-colors.ts  roles.ts
geodata/: Dockerfile  README.md  claude_desktop_config.example.json  pyproject.toml
geodata/src/geodata/: __init__.py  cli.py  datasets.yaml  db.py  manifest.py  parsers.py
geodata/src/geodata/exports/: __init__.py  features.py  pmtiles.py
geodata/src/geodata/init/: __init__.py  downloader.py  importers.py  runner.py
geodata/src/geodata/mcp/: __init__.py  server.py  tools.py
infra/docker/: Dockerfile.api  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.geodata.yml  docker-compose.geoserver.yml  docker-compose.observability.yml
infra/postgres/: 10-pg_cron.conf  Dockerfile.db
infra/postgres/initdb/: 00-extensions.sql
llm-training/: README.md
llm-training/datasets/: briefing_sft.json  dataset_info.snippet.json
notebooks/: 02_backtest_oct2018.ipynb
scripts/: demo_walkthrough.sh  export_llm_dataset.py  setup_openclaw.sh
src/limen/: __init__.py
src/limen/a2a/: __init__.py  card.py  models.py  service.py  skills.py  store.py
src/limen/agents/: __init__.py
src/limen/api/: __init__.py  auth.py  dependencies.py  main.py  schemas.py
src/limen/auth/: __init__.py  deps.py  email.py  models.py  passwords.py  repo.py  service.py  spid.py  tokens.py
src/limen/cli/: __init__.py  backtest.py  bootstrap_static.py  calibrate.py  create_admin.py  forecast.py  forecast_history.py  geodata.py  geoserver_sync.py  ingest_events.py  ingest_kb.py  main.py  mcp_serve.py  migrate.py  monitor_once.py  report.py  seed.py  seed_comuni.py  server.py  shadow_report.py  sync_egms.py  train.py
src/limen/config/: __init__.py  regional_thresholds.yaml  settings.py
src/limen/core/: __init__.py  llm_resolver.py  logging.py  scheduling.py
src/limen/data/: __init__.py  db.py  migrate.py
src/limen/integrations/: __init__.py  _http.py
src/limen/knowledge/: __init__.py  ingest.py  ontology.py  schema.py
src/limen/mcp/: __init__.py  server.py  tools.py
src/limen/ml/: __init__.py  baseline.py  dataset.py  feature_store.py  metrics.py  rain_features.py  shadow.py  train.py
src/limen/notifications/: __init__.py  base.py  dispatcher.py  email.py  mqtt.py  telegram.py  webhook.py
src/limen/observability/: __init__.py  metrics.py  tracing.py
src/limen/report/: __init__.py  archive.py  builder.py  (+9 more)
tests/: conftest.py
tests/e2e/: test_full_workflow.py
tests/integration/: test_alert_dispatch_executor.py  test_api.py  test_api_jobs.py  test_api_lifespan.py  test_api_tracing.py  test_cli_runners.py  test_comune_matview.py  test_dem_zonal.py  test_effis_client.py  test_geodata_importers.py  test_geodata_init_e2e.py  test_geodata_mcp_e2e.py  test_idrogeo_sync.py  test_ingv_client.py  test_iot_sensor_pipeline.py  test_map_views.py  test_mqtt_live.py  test_openmeteo_client.py  test_postgres_cache.py  test_repos.py  test_static_bootstrap.py
tests/unit/: test_a2a.py  test_a2a_endpoint.py  test_admin.py  test_alert_comune.py  test_alert_payload.py  test_api_index.py  test_assembler_rain_grid.py  test_auth_crypto.py  test_auth_endpoint.py  test_auth_service.py  test_backtest_rain_grid.py  test_briefing_eval.py  test_briefing_grounding.py  test_caine_model.py  test_chat_agents.py  test_clerk_auth.py  test_cli_report.py  test_comune_agent_tools.py  test_comune_endpoints.py  test_corine_zonal.py  test_dem_derivatives.py  test_dl_serve.py  test_dpc_sri.py  test_drift_monitor.py  test_effis_bulk_fallback.py  test_egms_aggregate.py  test_escalation_evidence.py  test_exposure_factor.py  test_filesystem_object_store.py  test_flood_forecast.py  test_flood_forecast_fetch.py  test_forecast_cli.py  test_forecast_history.py  test_geodata_downloader.py  test_geodata_export_job.py  test_geodata_exports.py  test_geodata_init_runner.py  test_geodata_manifest.py  test_geodata_mcp_tools.py  test_geodata_parsers.py  (+49 more)
(+209 files in other folders)
