[project]
name = "limen"
version = "0.1.0"
description = "Limen — AI multi-factor landslide-risk monitoring (Italy pilot: Puglia + Basilicata)."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Giuseppe Zileni", email = "giuseppe.zileni@hevolus.it" },
]
requires-python = ">=3.12"
keywords = ["landslide", "risk", "postgis", "geospatial", "italy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "asyncpg>=0.30",
    "geoalchemy2>=0.15",
    "geopandas>=1.0",
    "shapely>=2.0",
    "rasterio>=1.3",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
    "httpx>=0.27",
    "tenacity>=9.0",
    "apscheduler>=4.0.0a5",
]

[project.scripts]
limen = "limen.cli.main:main"

[project.urls]
Homepage = "https://github.com/gzileni/limen"
Issues = "https://github.com/gzileni/limen/issues"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "testcontainers>=4.8",
    "respx>=0.21",
]
storage = [
    "boto3>=1.35",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
    "ARG",
    "PTH",
    "RUF",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG", "B018"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
files = ["src"]
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
    "geopandas.*",
    "shapely.*",
    "rasterio.*",
    "geoalchemy2.*",
    "apscheduler.*",
    "testcontainers.*",
    "asyncpg.*",
    "boto3.*",
    "botocore.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: integration tests that require a real PostgreSQL+PostGIS instance (via testcontainers)",
    "slow: tests that take more than a few seconds",
]

[tool.coverage.run]
branch = true
source = ["src/limen"]

[tool.coverage.report]
show_missing = true
skip_covered = false
