[project]
name = "limen"
version = "0.1.0"
description = "Limen — AI multi-factor landslide-risk monitoring (Italy pilot: Puglia + Basilicata)."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Giuseppe Zileni", email = "giuseppe.zileni@hevolus.it" },
]
requires-python = ">=3.12"
keywords = ["landslide", "risk", "postgis", "geospatial", "italy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "asyncpg>=0.30",
    "geoalchemy2>=0.15",
    "geopandas>=1.0",
    "shapely>=2.0",
    "rasterio>=1.3",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
    "httpx>=0.27",
    "tenacity>=9.0",
    "apscheduler>=4.0.0a5",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-asyncpg>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "aiomqtt>=2.3",
    "aiosmtplib>=3.0",
]

[project.scripts]
limen = "limen.cli.main:main"

[project.urls]
Homepage = "https://github.com/gzileni/limen"
Issues = "https://github.com/gzileni/limen/issues"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "testcontainers>=4.8",
    "respx>=0.21",
    # LLM SDKs needed only to exercise the concrete LlmClientFactory
    # construction paths in tests. Runtime deployment installs them
    # via the optional `storage`/`agents` route per provider.
    "anthropic>=0.40",
    "openai>=1.55",
]
storage = [
    "boto3>=1.35",
]
ml = [
    "lightgbm>=4.5",
    "scikit-learn>=1.5",
    "mlflow>=2.16",
    "optuna>=4.0",
    "shap>=0.46",
    "onnxruntime>=1.20",
    "numpy>=2.1",
    "pandas>=2.2",
]
dl = [
    "torch>=2.4",
    "onnx>=1.17",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
    "ARG",
    "PTH",
    "RUF",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG", "B018"]
# Scoring module docs intentionally use mathematical Unicode (α, β, σ, ≥,
# −, ·) to mirror the equations in the project doc. RUF002/RUF003 flag
# those as ambiguous — disable here, the math is non-negotiable.
"src/limen/core/scoring/**" = ["RUF002", "RUF003"]
"src/limen/core/models/risk.py" = ["RUF002", "RUF003"]
"tests/unit/test_caine_model.py" = ["RUF002"]
"tests/unit/test_scoring_engine.py" = ["RUF002"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
files = ["src"]
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
    "geopandas.*",
    "shapely.*",
    "rasterio.*",
    "geoalchemy2.*",
    "apscheduler.*",
    "testcontainers.*",
    "asyncpg.*",
    "boto3.*",
    "botocore.*",
    "yaml.*",
    "opentelemetry.*",
    "aiomqtt.*",
    "aiosmtplib.*",
    "lightgbm.*",
    "sklearn.*",
    "mlflow.*",
    "optuna.*",
    "shap.*",
    "onnxruntime.*",
    "onnx.*",
    "torch.*",
    "numpy.*",
    "pandas.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: integration tests that require a real PostgreSQL+PostGIS instance (via testcontainers)",
    "slow: tests that take more than a few seconds",
]

[tool.coverage.run]
branch = true
source = ["src/limen"]
omit = [
    # Argparse dispatchers + uvicorn process wrappers — exercised by the
    # CLI integration smoke tests but not granularly counted.
    "*/cli/main.py",
    "*/cli/server.py",
    # Pure Protocol/type definitions — no runtime path.
    "*/core/abstractions/external.py",
    # V1 placeholder (intentionally empty), will land with V1.5+.
    "*/agents/workflows/escalation_workflow.py",
    # FastAPI production lifespan / built-in factory entrypoints —
    # covered via the test-injected lifespan in test_api*.
    "*/api/main.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "# pragma: no cover",
]
