[project]
name = "limen"
version = "0.1.0"
description = "Limen — AI multi-factor landslide-risk monitoring (Italy pilot: Puglia + Basilicata)."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Giuseppe Zileni", email = "giuseppe.zileni@hevolus.it" },
]
requires-python = ">=3.12"
keywords = ["landslide", "risk", "postgis", "geospatial", "italy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "asyncpg>=0.30",
    "geoalchemy2>=0.15",
    "geopandas>=1.0",
    "shapely>=2.0",
    "rasterio>=1.3",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
    "httpx>=0.27",
    "tenacity>=9.0",
    "apscheduler>=4.0.0a5",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-asyncpg>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "aiomqtt>=2.3",
    "aiosmtplib>=3.0",
    "pyjwt[crypto]>=2.9",
]

[project.scripts]
limen = "limen.cli.main:main"

[project.urls]
Homepage = "https://github.com/gzileni/limen"
Issues = "https://github.com/gzileni/limen/issues"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "testcontainers>=4.8",
    "respx>=0.21",
    # LLM SDKs needed only to exercise the concrete LlmClientFactory
    # construction paths in tests. Runtime deployment installs them
    # via the optional `storage`/`agents` route per provider.
    "anthropic>=0.40",
    "openai>=1.55",
    # Workspace member — installed editable so `geodata.*` is importable
    # from the test harness without a separate `uv pip install -e`.
    "limen-geodata",
]
storage = [
    "boto3>=1.35",
]
mcp = [
    # FastMCP — required to actually run the `ispra-geo` MCP server in
    # `geodata/`. The geodata workspace member also declares this in its
    # own optional-deps, but `uv sync --extra mcp` reads from this root
    # pyproject when building the geodata Docker image.
    "fastmcp>=0.4",
]
ml = [
    "lightgbm>=4.5",
    "scikit-learn>=1.5",
    "mlflow>=2.16",
    "optuna>=4.0",
    "shap>=0.46",
    "onnxruntime>=1.20",
    "numpy>=2.1",
    "pandas>=2.2",
]
dl = [
    "torch>=2.4",
    "onnx>=1.17",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

# Workspace — geodata/ is a sibling Python package installable as
# `limen-geodata` and importable as `geodata.*`. The layout is locked
# by §3.3.4-ter so the package is extractable into a standalone repo
# without refactoring; the main `limen` package never imports from
# `geodata.*` outside the optional `limen geodata` CLI subcommand
# (lazy-imported so the geodata deps stay optional at runtime).
[tool.uv.workspace]
members = ["geodata"]

[tool.uv.sources]
limen-geodata = { workspace = true }

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "geodata/src"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
    "ARG",
    "PTH",
    "RUF",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG", "B018"]
# Scoring module docs intentionally use mathematical Unicode (α, β, σ, ≥,
# −, ·) to mirror the equations in the project doc. RUF002/RUF003 flag
# those as ambiguous — disable here, the math is non-negotiable.
"src/limen/core/scoring/**" = ["RUF002", "RUF003"]
"src/limen/core/models/risk.py" = ["RUF002", "RUF003"]
"tests/unit/test_caine_model.py" = ["RUF002"]
"tests/unit/test_scoring_engine.py" = ["RUF002"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]
mypy_path = ["src", "geodata/src"]
namespace_packages = true
explicit_package_bases = true
files = ["src", "geodata/src"]
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
    "geopandas.*",
    "shapely.*",
    "rasterio.*",
    "geoalchemy2.*",
    "apscheduler.*",
    "testcontainers.*",
    "asyncpg.*",
    "boto3.*",
    "botocore.*",
    "yaml.*",
    "opentelemetry.*",
    "aiomqtt.*",
    "aiosmtplib.*",
    "lightgbm.*",
    "sklearn.*",
    "mlflow.*",
    "optuna.*",
    "shap.*",
    "onnxruntime.*",
    "onnx.*",
    "torch.*",
    "numpy.*",
    "pandas.*",
    "pyogrio.*",
    "fastmcp.*",
]
ignore_missing_imports = true

# The MCP server binds FastMCP decorators. FastMCP ships in the optional
# `[mcp]` extra and supplies its own types at runtime — we run a separate
# type-check job there. Locally the strict decorator rule is relaxed.
[[tool.mypy.overrides]]
module = "geodata.mcp.server"
disallow_untyped_decorators = false

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: integration tests that require a real PostgreSQL+PostGIS instance (via testcontainers)",
    "slow: tests that take more than a few seconds",
]

[tool.coverage.run]
branch = true
source = ["src/limen", "geodata/src/geodata"]
omit = [
    # Argparse dispatchers + uvicorn process wrappers — exercised by the
    # CLI integration smoke tests but not granularly counted.
    "*/cli/main.py",
    "*/cli/server.py",
    # Pure Protocol/type definitions — no runtime path.
    "*/core/abstractions/external.py",
    # FastAPI production lifespan / built-in factory entrypoints —
    # covered via the test-injected lifespan in test_api*.
    "*/api/main.py",
    # V2 ML / DL optional-deps code paths — gated by the `ml` and `dl`
    # dependency groups, exercised by a separate `ml` test job. Coverage
    # here is calculated against the dev group only.
    "*/ml/train.py",
    "*/ml/baseline.py",
    "*/ml/dl/model.py",
    "*/ml/dl/train.py",
    "*/ml/dl/serve.py",
    "*/ml/feature_store.py",
    "*/ml/monitoring/__init__.py",
    "*/core/scoring/ml_engine.py",
    "*/integrations/egms/client.py",
    "*/integrations/egms/sync_job.py",
    "*/api/jobs/drift_monitor.py",
    "*/api/jobs/iot_rollup.py",
    "*/api/jobs/iot_partition_rollover.py",
    "*/cli/train.py",
    "*/cli/sync_egms.py",
    # KG ingestion talks to a sidecar over HTTP — covered by the CLI
    # integration job, not by the local unit suite.
    "*/cli/ingest_kb.py",
    "*/knowledge/ingest.py",
    # Geodata workspace member runs against its own VPS PostGIS and the
    # tippecanoe / pyogrio system stack — separate integration job.
    # Local unit suite exercises the pure logic (manifest, parsers,
    # exports aggregators, MCP tool argument validation).
    "*/cli/geodata.py",
    "*/geodata/__init__.py",
    "*/geodata/cli.py",
    "*/geodata/db.py",
    "*/geodata/init/*",
    "*/geodata/exports/features.py",
    "*/geodata/exports/pmtiles.py",
    "*/geodata/mcp/server.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "# pragma: no cover",
]
